--- a/apps/shop-fe/package.json
+++ b/apps/shop-fe/package.json
@@ -6,17 +6,28 @@
   "scripts": {
     "dev": "vite --open",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "eslint": "eslint --init",
+    "lint": "eslint --ext .ts --ext .vue  --ext js  src/"
   },
   "dependencies": {
     "vue": "^3.2.37",
-    "dotenv": "~16.0.1"
+    "dotenv": "~16.0.1",
+    "good-storage": "~1.1.1",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0",
-    "vue-tsc": "^0.38.4",
-    "@types/node": "~18.0.5"
+    "@types/good-storage": "^1.1.0",
+    "@types/node": "^17.0.31",
+    "@types/vue-router": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "eslint": "^7.2.0",
+    "eslint-plugin-vue": "^7.20.0",
+    "typescript": "^4.5.4",
+    "vite": "^2.9.7",
+    "vue-eslint-parser": "^8.3.0",
+    "vue-tsc": "^0.34.7"
   }
 }
