--- a/apps/shop-fe/tsconfig.json
+++ b/apps/shop-fe/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2021",
     "useDefineForClassFields": true,
     "module": "esnext",
+    "outDir": "tsbuild",
     "moduleResolution": "node",
     "allowJs": true,
     "declaration": false,
